fix: text color on dark mode

--- a/packages/frontend/@n8n/design-system/src/css/date-picker.scss
+++ b/packages/frontend/@n8n/design-system/src/css/date-picker.scss
@@ -25,7 +25,7 @@
 		}
 		&:last-child {
 			background: var(--color--orange-400);
-			color: var(--color--foreground--tint-2);
+			color: var(--color--neutral-white);
 
 			&:hover {
 				background-color: var(--color--orange-500);
